--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Pixel Art Maker!</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Monoton">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>    
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -13,8 +14,8 @@
         Grid Height:
         <input type="number" id="inputHeight" name="height" min="1" value="1">
         Grid Width:
-        <input type="number" id="inputWeight" name="width" min="1" value="1">
-        <input type="submit">
+        <input type="number" id="inputWidth" name="width" min="1" value="1">
+        <input type="submit" id="addGrid">
     </form>
 
     <h2>Pick A Color</h2>
